# agent-chat

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  app.go  go.mod  go.sum  main.go  orchestrator.py  server.py  setup.py  start.sh  todo.md  version.go  wails.json
.claude/: settings.json  settings.local.json
.claude/hooks/: gemini-review-on-push.sh  notify-done.sh
.github/workflows/: release.yml
cmd/mcp-server/: main.go
config/: base_prompt.txt
desktop/: app.go
desktop/frontend/: index.html  package-lock.json  package.json  package.json.md5
docs/: ARCHITECTURE.md  MANAGER_PROMPT.md  PLAN-manager-agent-merged-final.md  PLAN-manager-agent.md  ROADMAP.md  TODO.md  manager-routing-plan.md
frontend/: package.json  package.json.md5  vite.config.ts
frontend/src/: App.tsx
internal/cli/: detector.go  mcpconfig.go  mcpsetup.go  startup.go  startup_test.go
internal/git/: git.go  git_test.go
internal/hub/: client.go  hub.go  persistence.go  protocol.go  protocol_test.go  room.go  room_test.go
internal/hubclient/: client.go
internal/mcpserver/: server.go  storage.go  tools.go
internal/orchestrator/: orchestrator.go  orchestrator_test.go
internal/prompt/: store.go
internal/pty/: manager.go  (+3 more)
mcp-server/: pyproject.toml
mcp-server/src/agent_chat_mcp/: __init__.py  __main__.py  server.py
mcp-server/src/agent_chat_mcp.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
prompts/: base_prompt.md  manager_prompt.md  paranoia-v2-stack-liberation.md
scripts/: build-universal.sh  create-dmg.sh  notarize.sh  sign.sh
(+37 files in other folders)
