[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-chat-mcp"
version = "1.0.0"
description = "Agent Chat Room MCP server - Allows multiple AI agents to communicate with each other"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "mcp[cli]>=1.0.0",
]

[tool.setuptools]
packages = ["agent_chat_mcp"]
package-dir = {"" = "src"}
